Fixed last spotbug in ui/Navigator.java